# study-rust

basic/: Cargo.toml
basic-syntax/: Cargo.toml
basic-syntax/src/: main.rs  main_println.rs  main_unit_type.rs
basic/src/: branches.rs  data_type.rs  for.rs  functions.rs  immutable.rs  loops.rs  while.rs
guessing_game/src/: main.rs
ownership/: Cargo.toml
ownership/src/: borrowing.rs  function.rs  move.rs  references.rs  scope.rs  slice.rs
