[package]
name = "variables"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "immutable"
path = "src/immutable.rs"

[[bin]]
name = "data_type"
path = "src/data_type.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "branches"
path = "src/branches.rs"

[[bin]]
name = "loops"
path = "src/loops.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
