[package]
name = "variables"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "immutable"
path = "src/immutable.rs"

[[bin]]
name = "data_type"
path = "src/data_type.rs"

[[bin]]
name = "functions"
path = "src/functions.rs"

[[bin]]
name = "if_else"
path = "src/if_else.rs"

[[bin]]
name = "loop"
path = "src/loop.rs"

[[bin]]
name = "while"
path = "src/while.rs"

[[bin]]
name = "for"
path = "src/for.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
