[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "scope"
path = "src/scope.rs"

[[bin]]
name = "move"
path = "src/move.rs"

[[bin]]
name = "function"
path = "src/function.rs"

[[bin]]
name = "borrowing"
path = "src/borrowing.rs"

[[bin]]
name = "references"
path = "src/references.rs"

[[bin]]
name = "slice"
path = "src/slice.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
